--- a/result/2022-07-27.md
+++ b/result/2022-07-27.md
@@ -48,4 +48,5 @@
 48. [欧洲热浪报告](https://s.weibo.com//weibo?q=%E6%AC%A7%E6%B4%B2%E7%83%AD%E6%B5%AA%E6%8A%A5%E5%91%8A&Refer=top) 69886
 49. [蔡徐坤登顶微博综艺视频榜](https://s.weibo.com//weibo?q=%23%E8%94%A1%E5%BE%90%E5%9D%A4%E7%99%BB%E9%A1%B6%E5%BE%AE%E5%8D%9A%E7%BB%BC%E8%89%BA%E8%A7%86%E9%A2%91%E6%A6%9C%23&Refer=top) 53914
 50. [张艺兴影视综全面开花](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%89%BA%E5%85%B4%E5%BD%B1%E8%A7%86%E7%BB%BC%E5%85%A8%E9%9D%A2%E5%BC%80%E8%8A%B1%23&Refer=top) 37589
-51. [82岁爷爷生日孙子送上清华通知书](https://s.weibo.com//weibo?q=%2382%E5%B2%81%E7%88%B7%E7%88%B7%E7%94%9F%E6%97%A5%E5%AD%99%E5%AD%90%E9%80%81%E4%B8%8A%E6%B8%85%E5%8D%8E%E9%80%9A%E7%9F%A5%E4%B9%A6%23&Refer=top) 18431
+51. [82岁爷爷生日孙子送上清华通知书](https://s.weibo.com//weibo?q=%2382%E5%B2%81%E7%88%B7%E7%88%B7%E7%94%9F%E6%97%A5%E5%AD%99%E5%AD%90%E9%80%81%E4%B8%8A%E6%B8%85%E5%8D%8E%E9%80%9A%E7%9F%A5%E4%B9%A6%23&Refer=top) 22864
+52. [如何理解智者不入爱河](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E7%90%86%E8%A7%A3%E6%99%BA%E8%80%85%E4%B8%8D%E5%85%A5%E7%88%B1%E6%B2%B3%23&Refer=top) 10796
